fix gradient on mobile

--- a/style.scss
+++ b/style.scss
@@ -208,14 +208,16 @@ header, footer {
 .first-screen {
     overflow: hidden;
     position: relative;
-    &::after {
-        content: '';
-        display: block;
-        width: 100%;
-        height: 100px;
-        position: absolute;
-        bottom: 0;
-        background: linear-gradient(to bottom, transparent, $black);
+    @media (min-width: $mobile) {
+        &::after {
+            content: '';
+            display: block;
+            width: 100%;
+            height: 100px;
+            position: absolute;
+            bottom: 0;
+            background: linear-gradient(to bottom, transparent, $black);
+        }
     }
     .video {
         width: 100vw;
@@ -224,11 +226,21 @@ header, footer {
         left: 0;
         z-index: -1;
         @media (max-width: $mobile) {
-            height: 100%;
+            // height: 100%;
+            &::after {
+                content: '';
+                display: block;
+                width: 100%;
+                height: 100px;
+                position: absolute;
+                bottom: 0;
+                background: linear-gradient(to bottom, transparent, $black);
+            }
         }
         video {
             width: 100vw;
             margin-top: -200px;   
+            position: relative;
             &::-webkit-media-controls {
                 display: none;
             }       
@@ -238,6 +250,17 @@ header, footer {
             @media (max-width: $mobile) {
                 margin-top: 0; 
                 // display: none;
+                &::after {
+                    content: '';
+                    display: block;
+                    width: 100%;
+                    height: 30px;
+                    position: absolute;
+                    z-index: 1;
+                    bottom: 0;
+                    // background: linear-gradient(to bottom, transparent, $black);
+                    background: red;
+                }
             }
         }
         // img {
